<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Data" Id="{db6560ed-fb2a-0049-1f52-f29952b65ec0}">
    <Declaration><![CDATA[TYPE
    Data EXTENDS TcoData.TcoEntity :
    STRUCT
        sampleData : SampleDataStructure;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>